[package]
name = "rotmg_extractor"
version = "0.1.0"
authors = ["Dominic Marcuse <dominic@marcuse.us>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
tempfile = "3.0"
tar = "0.4"
libflate = "0.1"
log = "0.4"
failure = "0.1"
failure_derive = "0.1"
swf-tree = "0.6"
swf-parser = "0.5"
rotmg_networking = { path = "../rotmg_networking" }
bimap = "0.3"
bytes = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", optional = true }
rotmg_data = { path = "../rotmg_data" }
structopt = { version = "0.2", optional = true }

[dev-dependencies]
simple_logger = "1.0"

[features]
cli = [ "serde_json", "structopt" ]

[lib]
doc = true

[[bin]]
name = "rotmg_extractor"
doc = false
required-features = [ "cli" ]
