[package]
name = "rotmg_networking"
version = "0.1.0"
authors = ["Dominic Marcuse <dominic@marcuse.us>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
failure_derive = "0.1.5"
bytes = "0.4.12"
num = "0.2.0"
serde = { version = "1.0.90", features = [ "derive" ] }
lazy_static = "1.3.0"
bimap = { version = "0.3.1", features = [ "serde" ] }
tokio = "0.1.18"
hex = "0.3.2"

[dev-dependencies]
assert_matches = "1.3.0"
