[package]
name = "rotmg_networking"
version = "0.1.0"
authors = ["Dominic Marcuse <dominic@marcuse.us>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
bytes = "0.4"
num = "0.2"
serde = { version = "1.0", features = [ "derive" ] }
lazy_static = "1.3"
bimap = { version = "0.3", features = [ "serde" ] }
futures = "0.1"
tokio = "0.1"
hex = "0.3"
log = "0.4"

[dev-dependencies]
assert_matches = "1.3"
