[package]
name = "rotmg_networking"
version = "0.1.0"
authors = ["Dominic Marcuse <dominic@marcuse.us>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
rotmg_packets = { path = "../rotmg_packets" }
failure = "0.1"
failure_derive = "0.1"
bytes = "0.4"
num = "0.2"
serde = { version = "1.0", features = [ "derive" ] }
futures = "0.1"
tokio = "0.1"
log = "0.4"
