[package]
name = "rotmg_packets"
version = "0.1.0"
authors = ["Dominic Marcuse <dominic@marcuse.us>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
bytes = "0.4"
num = "0.2"
serde = { version = "1.0", features = [ "derive" ] }
lazy_static = "1.3"
bimap = { version = "0.3", features = [ "serde" ] }
hex = "0.3"

[dev-dependencies]
assert_matches = "1.3"
